<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/bg_details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="8dp"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:src="@drawable/close"
                android:background="@drawable/bg_close"></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/nama_lengkap"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtNamaLengkap"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/tempat_lahir"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtTempatLahir"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textSize="18sp"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/tgl_lahir"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtTglLahir"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/jenis_kelamin"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/txtJk"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/perguruan"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/txtPerguruan"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/kategori"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/txtKategori"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/kelass"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/txtKelas"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/kelass2"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/txtKelas2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/link_video_1"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/txtLinkSatu"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/link_video_2"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/txtLinkDua"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/link_video_3"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/txtLinkTiga"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/link_video_4"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/txtLinkEmpat"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/vbold"
                android:text="..."
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/vregular"
                android:text="@string/upload_photo"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgPeserta"
                android:src="@drawable/forki"
                android:layout_width="100dp"
                android:layout_height="100dp"></ImageView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>