<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".View.RegisterActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorOrangeTua">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/vbold"
                    android:gravity="center"
                    android:text="Daftar"
                    android:textAllCaps="true"
                    android:textColor="@color/colorGray"
                    android:textSize="24sp"
                    android:textStyle="bold"></TextView>
                <TextView
                    android:id="@+id/txtIdUser"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/vbold"
                    android:gravity="center"
                    android:text="Daftar"
                    android:textAllCaps="true"
                    android:textColor="@color/colorGray"
                    android:textSize="24sp"
                    android:textStyle="bold"></TextView>
            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:src="@drawable/forki" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/vregular"
                android:gravity="center"
                android:text="@string/batanghari_open"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNamaKontingen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vbold"
                    android:text="@string/nama_kontingen"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:id="@+id/edtNamaKontingen"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/input"
                    android:fontFamily="@font/vregular"
                    android:hint="Masukkan Nama Kontingen"
                    android:padding="8dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNamaPelatih"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vbold"
                    android:text="@string/nama_pelatih"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:id="@+id/edtNamaPelatih"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/input"
                    android:fontFamily="@font/vregular"
                    android:hint="Masukkan Nama Pelatih"
                    android:padding="8dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNoHp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vbold"
                    android:text="@string/no_hp"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:id="@+id/edtNoHp"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/input"
                    android:fontFamily="@font/vregular"
                    android:hint="Masukkan No Hp"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtEmailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vbold"
                    android:text="@string/email"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:id="@+id/edtEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/input"
                    android:fontFamily="@font/vregular"
                    android:hint="Masukkan Email Address"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vbold"
                    android:text="@string/password"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/input"
                    android:fontFamily="@font/vregular"
                    android:hint="Masukkan Password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"></EditText>

            </LinearLayout>

            <Button
                android:id="@+id/bttnDaftar"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button"
                android:fontFamily="@font/vbold"
                android:text="Daftar"
                android:textColor="@color/colorGray"
                android:textSize="18sp"></Button>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progresBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>